--- a/mkdocs.yml
+++ b/mkdocs.yml
@@ -1,4 +1,4 @@
-site_name: My site
-site_url: https://mydomain.org/mysite
+site_name: CertDirectory
+site_url: https://certdirectory.ex-offenders.co.uk
 theme:
   name: material
