--- a/mkdocs.yml
+++ b/mkdocs.yml
@@ -36,6 +36,7 @@ markdown_extensions:
 extra_css:
   - 'assets/css/extra.css'
   - 'assets/css/profiles.css'
+  - 'overrides/custom.css'
 
 extra_javascript:
   - javascript/profiles.js
